<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.AddPostreFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NombrePostre"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TipoPostre"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PrecioPostre"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_tamaño"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TamañoPostre"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/bt_Agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btAddPostre" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/msgMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_photo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_photo" />

            <ImageButton
                android:id="@+id/bt_rota_l"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_rotate_l" />

            <ImageButton
                android:id="@+id/bt_rota_r"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_rotate_r" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

</LinearLayout>